fix: location section title font size on mobile devices changed

--- a/src/components/Location/Location.module.scss
+++ b/src/components/Location/Location.module.scss
@@ -37,8 +37,8 @@
   color: $color--text-dark;
 
   @media (max-width: 768px) {
-    line-height: 3rem;
-    font-size: 3rem;
+    font-size: 36px;
+    line-height: 36px;
   }
 }
 
@@ -62,14 +62,13 @@
     justify-content: flex-start;
     align-items: flex-start;
   }
-
 }
 
 .geographyDataElement {
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
-  
+
   @media (max-width: 1200px) {
     flex-direction: column;
     justify-content: center;
@@ -93,8 +92,6 @@
     @media (max-width: 768px) {
       width: 100%;
     }
-
-
   }
 }
 
